--- a/IPSX/Storyboard/Base.lproj/Landing.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Landing.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UkL-Ze-RCU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UkL-Ze-RCU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,20 +22,12 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IPExchange" translatesAutoresizingMaskIntoConstraints="NO" id="W2h-AD-74W">
-                                <rect key="frame" x="85" y="221" width="205" height="40"/>
+                                <rect key="frame" x="85" y="202" width="205" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="205" id="2r7-cW-OSs"/>
                                     <constraint firstAttribute="height" constant="40" id="ked-L8-hpp"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHa-Hj-Pph">
-                                <rect key="frame" x="65" y="275" width="245" height="38.5"/>
-                                <string key="text">Token sale hard cap 10,800 Ether. 
-Accepted currency: ether</string>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
-                                <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MRN-Ud-kuM" userLabel="BottomView">
                                 <rect key="frame" x="0.0" y="504" width="375" height="163"/>
                                 <subviews>
@@ -86,18 +78,24 @@ Accepted currency: ether</string>
                                     <constraint firstItem="ugu-Hv-Kee" firstAttribute="top" secondItem="kCB-he-W31" secondAttribute="bottom" constant="10" id="m4U-mV-tJO"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHa-Hj-Pph">
+                                <rect key="frame" x="145" y="174" width="85" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gHa-Hj-Pph" firstAttribute="top" secondItem="W2h-AD-74W" secondAttribute="bottom" constant="14" id="BMn-NX-vQ7"/>
-                            <constraint firstItem="gHa-Hj-Pph" firstAttribute="top" secondItem="zTh-l3-rXH" secondAttribute="top" constant="255" id="QTD-dZ-Qc2"/>
+                            <constraint firstItem="W2h-AD-74W" firstAttribute="top" secondItem="zTh-l3-rXH" secondAttribute="top" constant="182" id="B49-yZ-wpd"/>
                             <constraint firstItem="zTh-l3-rXH" firstAttribute="trailing" secondItem="lT4-1r-KeI" secondAttribute="trailing" id="Qcq-cr-III"/>
                             <constraint firstItem="MRN-Ud-kuM" firstAttribute="leading" secondItem="zTh-l3-rXH" secondAttribute="leading" id="U3a-c3-YLv"/>
+                            <constraint firstItem="gHa-Hj-Pph" firstAttribute="centerX" secondItem="W2h-AD-74W" secondAttribute="centerX" id="bZ3-RJ-ffG"/>
                             <constraint firstItem="MRN-Ud-kuM" firstAttribute="trailing" secondItem="zTh-l3-rXH" secondAttribute="trailing" id="cGa-mP-DH2"/>
                             <constraint firstItem="MRN-Ud-kuM" firstAttribute="bottom" secondItem="zTh-l3-rXH" secondAttribute="bottom" id="etg-Pm-lMQ"/>
                             <constraint firstItem="zTh-l3-rXH" firstAttribute="bottom" secondItem="lT4-1r-KeI" secondAttribute="bottom" id="gYA-wd-j1p"/>
                             <constraint firstItem="W2h-AD-74W" firstAttribute="centerX" secondItem="lPK-bp-Ngh" secondAttribute="centerX" id="i1l-Pi-Psn"/>
-                            <constraint firstItem="gHa-Hj-Pph" firstAttribute="centerX" secondItem="lPK-bp-Ngh" secondAttribute="centerX" id="sNM-1U-SUn"/>
+                            <constraint firstItem="W2h-AD-74W" firstAttribute="top" secondItem="gHa-Hj-Pph" secondAttribute="bottom" constant="8.5" id="nuX-vv-98f"/>
                             <constraint firstItem="lT4-1r-KeI" firstAttribute="leading" secondItem="zTh-l3-rXH" secondAttribute="leading" id="wO4-KQ-QEG"/>
                             <constraint firstItem="lT4-1r-KeI" firstAttribute="top" secondItem="zTh-l3-rXH" secondAttribute="top" id="zkr-Q4-bZY"/>
                         </constraints>
@@ -106,7 +104,7 @@ Accepted currency: ether</string>
                     <connections>
                         <outlet property="backgroundImageView" destination="lT4-1r-KeI" id="Ecl-5A-mdJ"/>
                         <outlet property="bottomView" destination="MRN-Ud-kuM" id="up9-Wv-GQ7"/>
-                        <outlet property="labelTopConstraint" destination="QTD-dZ-Qc2" id="rtl-VJ-vk5"/>
+                        <outlet property="labelTopConstraint" destination="B49-yZ-wpd" id="F6p-et-aX4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afi-c2-hPI" userLabel="First Responder" sceneMemberID="firstResponder"/>
