Bug #II-119 - Fix add wallet after register bug

--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -618,6 +618,6 @@
         <image name="keyIcon" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5cu-zl-FKV"/>
+        <segue reference="nNU-Zf-N1I"/>
     </inferredMetricsTieBreakers>
 </document>
