Handle proxy details scenarios when expired or not on wifi

--- a/IPSX/Flows/New Proxy/Storyboard/Base.lproj/NewProxy.storyboard
+++ b/IPSX/Flows/New Proxy/Storyboard/Base.lproj/NewProxy.storyboard
@@ -501,6 +501,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="copyLabel" destination="roj-Ny-AcO" id="kGv-ps-DOY"/>
                                             <outlet property="titleLabel" destination="7RB-lY-VCz" id="ckX-wT-f2a"/>
                                             <outlet property="valueLabel" destination="2Xt-Ga-vHU" id="spX-5h-Zu8"/>
                                         </connections>
