--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -237,7 +237,15 @@
                 <viewControllerPlaceholder storyboardName="TokenRequest" id="ZZ3-69-9NQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goG-Au-rdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1715" y="1288"/>
+            <point key="canvasLocation" x="-1797" y="1288"/>
+        </scene>
+        <!--TokenDeposit-->
+        <scene sceneID="9Yi-LI-qqe">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TokenDeposit" id="zUu-Hn-Ofc" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hoI-Nz-L6J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1546" y="1288"/>
         </scene>
         <!--ProxyDetailsControllerID-->
         <scene sceneID="DLv-lT-FbC">
@@ -245,7 +253,7 @@
                 <viewControllerPlaceholder storyboardName="NewProxy" referencedIdentifier="ProxyDetailsControllerID" id="qSC-O9-erJ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mf9-hA-eQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1366" y="1288"/>
+            <point key="canvasLocation" x="-1256" y="1288"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="hoR-RX-E2W">
@@ -306,8 +314,42 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vpc-yV-9lQ" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="112" width="345" height="44"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Create Token Deposit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7z1-KK-S1y">
+                                                <rect key="frame" x="8" y="12" width="295" height="20"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="＋" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Znh-Fz-vlP">
+                                                <rect key="frame" x="311" y="7" width="26" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <color key="textColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pm4-IN-H4J">
+                                                <rect key="frame" x="0.0" y="0.0" width="345" height="44"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <connections>
+                                                    <action selector="tokenDepositAction:" destination="4A6-HS-yFF" eventType="touchUpInside" id="0ro-ZE-Jly"/>
+                                                    <action selector="tokenRequestAction:" destination="4A6-HS-yFF" eventType="touchUpInside" id="VeL-aE-oIZ"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="Jrn-yP-lrN"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="110" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="0Jl-Mt-64I">
-                                        <rect key="frame" x="15" y="109" width="345" height="532"/>
+                                        <rect key="frame" x="15" y="161" width="345" height="480"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ActivationDetailsCellID" rowHeight="100" id="XqS-PS-Aar" customClass="ProxyActivationDetailsCell" customModule="IPSX" customModuleProvider="target">
@@ -452,9 +494,12 @@
                                     <constraint firstItem="PSQ-5O-SSB" firstAttribute="top" secondItem="5Xw-8d-dgg" secondAttribute="top" constant="11" id="Hgd-I5-hb7"/>
                                     <constraint firstItem="gON-gb-2hO" firstAttribute="leading" secondItem="5Xw-8d-dgg" secondAttribute="leading" constant="15" id="Iv5-kK-8YF"/>
                                     <constraint firstAttribute="trailing" secondItem="gON-gb-2hO" secondAttribute="trailing" constant="15" id="Jcg-BO-qUJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vpc-yV-9lQ" secondAttribute="trailing" constant="15" id="OeX-b1-emN"/>
                                     <constraint firstAttribute="bottom" secondItem="0Jl-Mt-64I" secondAttribute="bottom" id="Tbv-ap-ebu"/>
+                                    <constraint firstItem="Vpc-yV-9lQ" firstAttribute="top" secondItem="gON-gb-2hO" secondAttribute="bottom" constant="5" id="UaZ-sn-Re8"/>
+                                    <constraint firstItem="Vpc-yV-9lQ" firstAttribute="leading" secondItem="5Xw-8d-dgg" secondAttribute="leading" constant="15" id="aIe-pm-ixQ"/>
                                     <constraint firstItem="0Jl-Mt-64I" firstAttribute="trailing" secondItem="gON-gb-2hO" secondAttribute="trailing" id="hof-h4-mNB"/>
-                                    <constraint firstItem="0Jl-Mt-64I" firstAttribute="top" secondItem="gON-gb-2hO" secondAttribute="bottom" constant="2" id="sEs-60-ePP"/>
+                                    <constraint firstItem="0Jl-Mt-64I" firstAttribute="top" secondItem="gON-gb-2hO" secondAttribute="bottom" constant="54" id="sEs-60-ePP"/>
                                     <constraint firstItem="gON-gb-2hO" firstAttribute="top" secondItem="PSQ-5O-SSB" secondAttribute="bottom" constant="24" id="src-Kw-AnD"/>
                                 </constraints>
                             </view>
@@ -538,6 +583,7 @@
                         <segue destination="qSC-O9-erJ" kind="presentation" identifier="ProxyDetailsSegueiID" id="vlC-TX-1jM"/>
                         <segue destination="ZZ3-69-9NQ" kind="show" identifier="showTokenRequestSegueID" id="449-lp-Zve"/>
                         <segue destination="adJ-7o-RXS" kind="presentation" identifier="FreeProxySegueID" id="eg6-mz-aaC"/>
+                        <segue destination="zUu-Hn-Ofc" kind="show" identifier="tokenDepositSegueID" id="jJo-g5-NxO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sqh-Z5-fpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
