Add missing separator tro storyboard

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1183,11 +1183,19 @@
                                                 <action selector="addWalletAction:" destination="pEl-nG-Fp4" eventType="touchUpInside" id="Qi7-9o-qKa"/>
                                             </connections>
                                         </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEx-U1-XRT" userLabel="Separator">
+                                            <rect key="frame" x="0.0" y="320.33333333333331" width="375" height="0.66666666666668561"/>
+                                            <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.3032570423" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.5" id="ncP-3g-rUh"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="r2K-hC-vsg" secondAttribute="trailing" id="8YB-FF-oUi"/>
                                         <constraint firstAttribute="trailing" secondItem="Ngo-0q-bqD" secondAttribute="trailing" constant="15" id="EkK-gi-DMZ"/>
+                                        <constraint firstAttribute="bottom" secondItem="hEx-U1-XRT" secondAttribute="bottom" id="I7k-kr-JCD"/>
                                         <constraint firstItem="1iZ-T7-7em" firstAttribute="leading" secondItem="gtm-IY-N6q" secondAttribute="leading" id="K3X-uc-wC3"/>
                                         <constraint firstItem="rjx-Xm-317" firstAttribute="trailing" secondItem="Ngo-0q-bqD" secondAttribute="trailing" id="PDz-zj-2Uc"/>
                                         <constraint firstItem="rjx-Xm-317" firstAttribute="top" secondItem="Ngo-0q-bqD" secondAttribute="bottom" constant="10" id="SyX-4x-bmQ"/>
@@ -1199,6 +1207,8 @@
                                         <constraint firstItem="gtm-IY-N6q" firstAttribute="top" secondItem="rjx-Xm-317" secondAttribute="bottom" constant="10" id="l3g-OE-Zve"/>
                                         <constraint firstItem="Ngo-0q-bqD" firstAttribute="leading" secondItem="n2r-iV-TAw" secondAttribute="leading" constant="15" id="oDW-hh-sTl"/>
                                         <constraint firstAttribute="bottom" secondItem="r2K-hC-vsg" secondAttribute="bottom" id="qHb-dS-P1r"/>
+                                        <constraint firstAttribute="trailing" secondItem="hEx-U1-XRT" secondAttribute="trailing" id="wZh-Y4-lEh"/>
+                                        <constraint firstItem="hEx-U1-XRT" firstAttribute="leading" secondItem="n2r-iV-TAw" secondAttribute="leading" id="xBB-vE-hGB"/>
                                         <constraint firstItem="gtm-IY-N6q" firstAttribute="leading" secondItem="rjx-Xm-317" secondAttribute="leading" id="xRL-60-4ol"/>
                                     </constraints>
                                 </view>
