Add missing outlet

--- a/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
@@ -1039,6 +1039,7 @@
                         <outlet property="ethAddress" destination="jUM-Md-xiI" id="ltP-By-HtR"/>
                         <outlet property="ethDepositAddressLabel" destination="w4i-0D-m72" id="rbV-bb-bhv"/>
                         <outlet property="loadingView" destination="Mgw-Lh-bqF" id="76Z-Eg-HYw"/>
+                        <outlet property="screenTitleLabel" destination="TDV-x9-NMN" id="gYl-Sh-9GB"/>
                         <outlet property="separatorView" destination="ZYG-xF-qr4" id="cOa-UE-VT9"/>
                         <outlet property="topBarView" destination="frT-Cu-9eN" id="2Tq-n4-h3r"/>
                         <outlet property="topConstraintOutlet" destination="dyH-7m-qhC" id="16T-gK-8gr"/>
