Deposit create keyboard bug fixes

--- a/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
@@ -361,7 +361,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="99" estimatedRowHeight="-1" sectionHeaderHeight="38" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="zgF-VL-SZ1">
-                                <rect key="frame" x="15" y="259" width="345" height="408"/>
+                                <rect key="frame" x="15" y="241" width="345" height="426"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProxyPackCellID" id="o4j-uJ-Pv8" customClass="ProxyPackCell" customModule="IPSX" customModuleProvider="target">
@@ -675,7 +675,7 @@
                             <constraint firstItem="vIL-zJ-HIC" firstAttribute="centerY" secondItem="Jdn-Vl-Osm" secondAttribute="centerY" id="lza-7z-Rlz"/>
                             <constraint firstItem="Wuu-cF-4k4" firstAttribute="top" secondItem="ozK-Tu-fnb" secondAttribute="bottom" constant="12" id="oUz-aP-FLd"/>
                             <constraint firstItem="zgF-VL-SZ1" firstAttribute="leading" secondItem="Jdn-Vl-Osm" secondAttribute="leading" constant="15" id="qNa-o8-cPv"/>
-                            <constraint firstItem="zgF-VL-SZ1" firstAttribute="top" secondItem="ihZ-fF-IFt" secondAttribute="bottom" constant="20" id="xTD-uD-KSO"/>
+                            <constraint firstItem="zgF-VL-SZ1" firstAttribute="top" secondItem="ihZ-fF-IFt" secondAttribute="bottom" constant="2" id="xTD-uD-KSO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Jdn-Vl-Osm"/>
                     </view>
@@ -1062,6 +1062,6 @@
         <image name="walletAccepted" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Tr8-7C-1cg"/>
+        <segue reference="5OV-46-10Z"/>
     </inferredMetricsTieBreakers>
 </document>
