Fb register fix: perform autologin and go to add wallet

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -416,6 +416,7 @@
                         <segue destination="R1q-eW-KM7" kind="show" identifier="showRegConfirmationSegueID" id="AcT-LT-hvw"/>
                         <segue destination="IVQ-OJ-hHf" kind="unwind" identifier="showDashboardSegueID" unwindAction="unwindToDashboardWithSegue:" id="xlX-v8-zit"/>
                         <segue destination="T1P-fu-tvH" kind="presentation" identifier="TermsWebViewSegueID" id="TNl-m6-ngZ"/>
+                        <segue destination="ucX-H0-IAP" kind="show" identifier="showAddWalletSegueID" id="qJi-V5-Hcv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVn-Vo-kvw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -430,6 +431,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vc9-To-GUf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4075" y="-320"/>
+        </scene>
+        <!--WalletAdd-->
+        <scene sceneID="uNX-sZ-ezJ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="WalletAdd" id="ucX-H0-IAP" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jZT-W7-DYf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3894" y="587"/>
         </scene>
         <!--Register Done Controller-->
         <scene sceneID="AE8-0u-CFe">
