Implement create deposit

--- a/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/TokenDeposit.storyboard
@@ -1036,7 +1036,7 @@
                         <outlet property="detailsStatePendingView" destination="7iB-e8-jcx" id="M2W-Wn-Ggd"/>
                         <outlet property="detailsTitleLabel" destination="cUi-bO-iA4" id="mu9-c4-Odu"/>
                         <outlet property="ethAddresAlias" destination="F8T-LM-5Kz" id="Ned-2r-gOD"/>
-                        <outlet property="ethAddress" destination="jUM-Md-xiI" id="ltP-By-HtR"/>
+                        <outlet property="ethAddressLabel" destination="jUM-Md-xiI" id="ufi-yP-7mC"/>
                         <outlet property="ethDepositAddressLabel" destination="w4i-0D-m72" id="rbV-bb-bhv"/>
                         <outlet property="loadingView" destination="Mgw-Lh-bqF" id="76Z-Eg-HYw"/>
                         <outlet property="screenTitleLabel" destination="TDV-x9-NMN" id="gYl-Sh-9GB"/>
